--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -1,17 +1,24 @@
 @import url('https://fonts.googleapis.com/css?family=Bungee+Inline|Oswald');
+* {
+    box-sizing: border-box;
+}
 /* 
     Add a CSS ruleset to accomplish the following:
     - Use the 'Oswald' font family at 14px throughout the body of the document.
 */
 
-nav {
-    font-family: sans-serif;
-    font-size: 10px;
+
+nav {font-family: sans-serif; font-size: 10px;}
+#main {width: 900px; margin: 10px auto;}
+
+@font-face {
+    font-family: oswald;
+    src: url('https://fonts.googleapis.com/css2?family=Bungee+Inline&display=swap');
 }
 
-#main {
-    width: 900px;
-    margin: 10px auto;
+body {
+    font-family: oswald;
+    font-size: 14px;
 }
 
 /* 
@@ -21,63 +28,64 @@ nav {
         - use a lighter weight font
 */
 
-#menu {
-    columns: 420px 2;
-    column-gap: 60px;
+h1 {
+    font-family: bungee inline;
+    font-size: 46px;
+    font-weight: lighter;
 }
 
-section {
-    margin-bottom: 20px;
-    padding: 10px;
-}
+#menu {columns: 420px 2; column-gap: 60px;}
+section {margin-bottom: 20px; padding: 10px;}
 
-h2 {
-    margin-top: 0;
-}
+h2 {margin-top: 0;}
 
 /* 
     Add a CSS ruleset targeting targeting the headings of the menu (e.g. "Starters") to accomplish the following:
         - Show each of the section headings of the menu in uppercase
 */
+h2 {
+    text-transform: uppercase;
+    border: black;
+}
 
 /* 
      Update the following ruleset (dt) to accomplish the following:
         - Make the name of each menu item appear in bold 
         - set the font size to 16px
 */
-
 dt {
     display: inline;
+    font-weight: bold;
+    font-size: 16px;
 }
 
 /* 
     Add a CSS ruleset to accomplish the following:
     - Make a comma appear after the name of each menu item
 */
-
-dd {
-    display: inline;
-    margin: 0;
+dt::after {
+    content: ",";
 }
 
-dd::after {
-    content: " ";
-    display: block;
-    clear: both;
-    margin-bottom: 15px;
-}
 
-.price {
-    float: right;
-    padding: 0 0 35px 20px;
-}
+dd {display: inline; margin: 0;}
+dd::after {content: " "; display: block; clear: both; margin-bottom: 15px;}
+
+.price {float: right; padding: 0 0 35px 20px;}
 
 /* 
     Add a CSS ruleset targeting the footer to accomplish the following:
     - right align the text in the footer
 */
+footer {
+    text-align: right;
+}
+
 
 /* 
     Add a CSS ruleset targeting the starters and desserts sections to accomplish the following:
     - draw a 2px black border around the sections
 */
+#starters, #desserts {
+    border: 2px solid black;
+}
